added link to github prof

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		</div>
 		
 		<div id='logo'>hubabl<span id='about_txt'> connects you to conversations. @mkrecny</span></div>
-		<div id='github'><a href="http://www.google.com">github</a></div>
+		<div id='github'><a href="https://github.com/mkrecny/hubabl">github</a></div>
 	</body>
 	
 	<script type="text/javascript">
